--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./inventario/src"
+    "start": "node ./inventario/src/index.js"
   },
   "keywords": [],
   "author": "",
